--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,173 @@
-body {
+@import url('https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap');
+
+* {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  font-family: 'Nunito Sans', sans-serif;
+  color: #fff;
+}
+
+body>div {
+  height: inherit;
+}
+
+input,
+button,
+a {
+  outline: none;
+}
+
+h1 {
+  letter-spacing: 4px;
+  margin-bottom: 10px;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sky {
+  width: 100%;
+  height: 100vh;
+  /* position:absolute; */
+  background: #4B79A1;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #283E51, #0A2342);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #283E51, #0A2342);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -olinear-gradient(to top, #283E51, #0A2342);
+  position: relative;
+  z-index: 1;
+}
+
+.stars {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 90%;
+  display: block;
+  background: url('img/stars.png') repeat top center;
+  z-index: -2;
+}
+
+.mountains {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: url('img/bg-mountains.png') center bottom no-repeat;
+  background-size: 100%;
+  z-index: -1;
+}
+
+.main {
+  width: 100%;
+  height: 80vh;
+}
+
+.container {
+  width: 800px;
+  height: 90vh;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+form {
+  margin: 40px 0 30px;
+}
+
+input {
+  background-color: transparent;
+  border: 0;
+  border-bottom: solid 1px #94afcc;
+  width: 40%;
+  padding-bottom: 4px;
+  color: #fff;
+  font-weight: lighter;
+  letter-spacing: 2px;
+  margin-right: 20px;
+  font-size: 1.25em;
+}
+
+::placeholder {
+  color: #fff;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 5000s ease-in-out 0s;
+  -webkit-text-fill-color: #fff !important;
+}
+
+button {
+  position: relative;
+  border: 0;
+  border-radius: 5px;
+  padding: 8px 20px;
+  font-size: 1em;
+  letter-spacing: 1px;
+  background: #8eadce;
+  color: #fff;
+  transition: .3s ease-in-out;
+  cursor: pointer;
+  overflow: hidden;
+  z-index: 1;
+}
+
+button:hover {
+  background: rgb(145, 182, 219);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, .35);
+  z-index: 8;
+}
+
+button:before {
+  display: block;
+  position: absolute;
+  content: "";
+  background: rgba(255, 255, 255, 0.15);
+  height: 100%;
+  width: 3em;
+  top: 0;
+  left: -4.5em;
+  transform: skewX(-45deg) translateX(0);
+}
+
+button:hover:before {
+  transform: skewX(-45deg) translateX(22.5em);
+  transition: all 0.75s ease-in-out;
 }
 
 
+.weather-info {}
+
+.weather-info p {
+  font-size: 1.125em;
+  margin: 15px 0;
+}
+
+.weather-info .val {
+  display: inline-block;
+  font-size: .875em;
+  width: 120px;
+  margin-right: 15px;
+}
 
 /* .App-logo {
   animation: App-logo-spin infinite 20s linear;
