--- a/src/App.css
+++ b/src/App.css
@@ -157,16 +157,37 @@ button:hover:before {
 
 .weather-info {}
 
-.weather-info p {
+p {
   font-size: 1.125em;
   margin: 15px 0;
 }
 
-.weather-info .val {
+.weather-info .key {
   display: inline-block;
   font-size: .875em;
   width: 120px;
   margin-right: 15px;
+}
+
+.degrees-types {
+  font-size: .825em;
+  position: relative;
+  top: -10px;
+  right: -5px;
+}
+
+.main-info {
+  display: flex;
+  align-items: center;
+}
+
+.location {
+  font-size: 1.8em;
+}
+
+.temperature {
+  margin-left: 30px;
+  font-size: 3em;
 }
 
 /* .App-logo {
